@@ -21,6 +21,8 @@
           (http://www.packetfence.org/mantis/view.php?id=614)
         removed unused icons from distribution
           (http://www.packetfence.org/mantis/view.php?id=621)
+        removed unnecessary files from web admin GUI
+          (http://www.packetfence.org/mantis/view.php?id=622)
 
 1.8.1
         authorized @ as first symbol in password
